# Gain2015

work/: CMakeLists.txt
work/ext/libgeotiff/: CMakeLists.txt
work/ext/libgeotiff/cmake/: CMakeLists.txt
work/ext/libtiff/: CMakeLists.txt
work/ext/libtiff/libtiff/: tif_pixarlog.c  tiff.h
work/ext/libtiff/tools/: tiff2ps.c  tiffcp.c
work/res/: mount_jackson_n39_w107_3arc.tif  mt_fuji_n035e138.tif  southern_alps_s045e169.tif
work/src/: CMakeLists.txt  gain.cpp  gain.hpp  main.cpp  opencv_util.hpp  patchmatch.cpp  patchmatch.hpp  scott.cpp  scott.hpp  terrain.cpp  terrain.hpp  terrain_fill.hpp  terrain_flow.hpp  terrainopt.cpp  terrainopt.hpp
